# mock-io

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: stdio.rs  tokio.rs
